@@ -1,5 +1,6 @@
 0.4.10 (in development)
 ------------------------------------------------------------------------
+- Feature: [#21590] [Plugin] Plugins can now read and write banner properties of tile elements.
 - Improved: [#21424] Extra viewports can now rotate independently from the main viewport.
 - Change: [#21529] Classify “Southern Sands”, “Tiny Towers”, “Nevermore Park”, “Pacifica” as expert scenarios.
 - Fix: [#910] Extra viewport does not preserve the location when rotating.
